Closed Bug 1374887 Opened 8 years ago Closed 8 years ago

nsFormFillController throws invisible exceptions when trying to call non-existing nsIFormAutoComplete::stopControllingInput function

Categories

(Toolkit :: Form Manager, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(2 files)

By adding the attached debugging patch you see us creating a bunch of invisible exceptions when running Speedometer, including this one: Exception: JavaScript component does not have a method named: "stopControllingInput"'JavaScript component does not have a method named: "stopControllingInput"' when calling method: [nsIFormAutoComplete::stopControllingInput], It turns out that this function was removed from bug 1294502 <https://github.com/mozilla/gecko-dev/commit/c917d86d56b0d4004056c1a7eb97c7ba578c3333#diff-8828dcb4aa1c89082172cede49c2bb6dL545> and left the C++ side of this, which is now effectively an exception throwing machinery. ;-)
This currently only incurs some XPConnect and exception creation overhead, as the method has no implementation.
Attachment #8879780 - Flags: review?(MattN+bmo)
Comment on attachment 8879780 [details] [diff] [review] Remove nsIFormAutoComplete::StopControllingInput() from the C++ side Review of attachment 8879780 [details] [diff] [review]: ----------------------------------------------------------------- Thanks
Attachment #8879780 - Flags: review?(MattN+bmo) → review+
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/41d082a79f1f Remove nsIFormAutoComplete::StopControllingInput() from the C++ side; r=MattN
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: