Bug 1374887 - Remove nsIFormAutoComplete::StopControllingInput() from the C++ side; r=MattN

This currently only incurs some XPConnect and exception creation
overhead, as the method has no implementation.